# montagem-widener

./: CHANGELOG.md  CMakeLists.txt  INSTALL_Mac.txt  INSTALL_Windows.txt  README.md  TERMS.txt
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  WidenerLookAndFeel.h  WidenerProcessor.cpp  WidenerProcessor.h
